--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,11 @@
 <div class="row mt-4">
   <div class="col-3">
     <!-- Sidebar -->
-    
-    sidebar
+    <shared-sidebar></shared-sidebar>
   </div>
   <div class="col">
-    <shared-home-page></shared-home-page>
     <!-- Nuestras Paginas -->
+    <router-outlet></router-outlet>
 
   </div>
 
